--- a/People.html
+++ b/People.html
@@ -24,146 +24,79 @@
 <p><tt> </tt> </p>
 <h1>Research Group</h1>
 <h2>Current Members</h2>
+<h3>Postdoc</h3>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="https://yuxin-dong.github.io/">Yuxin Dong</a> (co-advising with Prof. Xia Ning)</p>
+</div></div>
 <h3>PhD Students</h3>
-<table class="imgtable"><tr><td>
-<img src="pic/group/jiachen.jpg" alt="alt text" width="150px" height="214px" />&nbsp;</td>
-<td align="left"><p><a href="http://www.jiachenjiang.com/">Jiachen Jiang</a><br /></p>
-<p>MS, UMich; BS, Beihang<br /></p>
-<ul>
-<li><p>J. Jiang, J. Zhou, P. Wang, Q. Qu, D. Mixon, C. You, Z. Zhu, Generalized Neural Collapse for a Large Number of Classes, 2023.</p>
-</li>
-</ul>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="pic/group/hamoud.jpg" alt="alt text" width="150px" height="150px" />&nbsp;</td>
-<td align="left"><p><a href="https://scholar.google.com/citations?user=uFjJOYgAAAAJ&amp;hl=en">Hamoud Alhazmi</a><br /></p>
-<p>MS & BS, University of Canberra<br /></p>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="pic/group/jinxin.png" alt="alt text" width="150px" height="180px" />&nbsp;</td>
-<td align="left"><p><a href="https://scholar.google.com/citations?user=XR5CQJcAAAAJ&amp;hl=en">Jinxin Zhou</a><br /></p>
-<p>MS, UMich; BS, HUST<br /></p>
-<ul>
-<li><p>J. Zhou, C. You, X. Li, K. Liu, S. Liu, Q. Qu, and Z. Zhu, &lsquo;&lsquo;Are All Losses Created Equal: A Neural Collapse Perspective," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
-</li>
-</ul>
-<ul>
-<li><p>J. Zhou*, X. Li*, T. Ding, C. You, Q. Qu, and Z. Zhu, “<a href="https://proceedings.mlr.press/v162/zhou22c/zhou22c.pdf">On the Optimization
-Landscape of Neural Collapse under MSE Loss: Global Optimality with Unconstrained
-Features</a>,” <i>International Conference in Machine Learning (ICML)</i>, 2022. (acceptance
-rate = 20%)</p>
-</li>
-</ul>
-<ul>
-<li><p>Z. Zhu*, T. Ding*, J. Zhou, X. Li, C. You, J. Sulam, and Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2105.02375">A Geometric Analysis of Neural Collapse with Unconstrained Features</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2021. (<font color=red ><b>spotlight, top 3% </b></font>; acceptance rate = 26%)</p>
-</li>
-</ul>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="pic/group/zhen.png" alt="alt text" width="150px" height="180px" />&nbsp;</td>
-<td align="left"><p><a href="https://scholar.google.com/citations?user=de_JaPkAAAAJ&amp;hl=en">Zhen Qin</a><br /></p>
-<p>MS, SEU; BS, LDU<br /></p>
-<ul>
-<li><p>Z. Qin, A. Lidiak, Z. Gong, G. Tang, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.04327">Error Analysis of Tensor-Train Cross Approximation</a>," <i>Neural Information Processing Systems (NeurIPS)</i>, December 2022.</p>
-</li>
-</ul>
-<ul>
-<li><p>A. Lidiak, C. Jameson, Z. Qin, G. Tang, M. B. Wakin, Z. Zhu, and Z. Gong, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.06397">Quantum state tomography with tensor train cross approximation</a>,", preprint, 2022.</p>
-</li>
-</ul>
-<ul>
-<li><p>H. Yu, Z. Qin, and Z. Zhu, “<a href="https://ieeexplore.ieee.org/document/9747165">Learning Approach for Fast Approximate Matrix Factorizations</a>,” <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2022.</p>
-</li>
-</ul>
-</td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="pic/group/xi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p>Xi Chen<br /></p>
-<p>co-advising with <a href="https://aperrault.github.io/">Andrew Perrault</a> <br /></p>
-</td></tr></table>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="https://scholar.google.com/citations?hl=en&amp;user=_A95xeEAAAAJ">Huminhao Zhu</a><br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="https://scholar.google.com/citations?user=U55yracAAAAJ&amp;hl=en&amp;oi=sra">Xudong Zhu</a><br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="http://www.jiachenjiang.com/">Jiachen Jiang</a><br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="https://scholar.google.com/citations?user=uFjJOYgAAAAJ&amp;hl=en">Hamoud Alhazmi</a><br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="https://scholar.google.com/citations?user=XR5CQJcAAAAJ&amp;hl=en">Jinxin Zhou</a><br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="https://cx441000319.github.io/">Xi Chen</a> (co-advising with <a href="https://aperrault.github.io/">Prof. Andrew Perrault</a>)<br /></p>
+</div></div>
 <h3>Master Students</h3>
-<table class="imgtable"><tr><td>
-<img src="pic/group/shreya.png" alt="alt text" width="150px" height="202px" />&nbsp;</td>
-<td align="left"><p>Shreya Byreddy <br /></p>
-<p>BS, OSU<br /></p>
-</td></tr></table>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Shriram Ravishankar<br /></p>
+</div></div>
+<h3>Undergraduate Students</h3>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Alina Liu<br /></p>
+</div></div>
 <h3>K12 Students</h3>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Jackson Sean</p>
+<p>Chris Hill<br /></p>
 </div></div>
-<h2>Visting Students</h2>
-<table class="imgtable"><tr><td>
-<img src="pic/group/xinle.png" alt="alt text" width="150px" height="250px" />&nbsp;</td>
-<td align="left"><p>Xinle Wu <br /></p>
-<p>Aalborg University, Denmark <br /></p>
-</td></tr></table>
-<h2>Former Members</h2>
-<h3>Former Master Students</h3>
-<table class="imgtable"><tr><td>
-<img src="pic/group/haiyan.png" alt="alt text" width="150px" height="150px" />&nbsp;</td>
-<td align="left"><p>Haiyan Yu<br /></p>
-<ul>
-<li><p>H. Yu, Z. Qin, and Z. Zhu, “<a href="https://ieeexplore.ieee.org/document/9747165">Learning Approach for Fast Approximate Matrix Factorizations</a>,” <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2022.</p>
-</li>
-</ul>
-</td></tr></table>
-<h2>Research Collaborators</h2>
-<ul>
-<li><p><a href="https://www.tianyuding.com/">Tianyu Ding</a> (JHU, Applied Math)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://www.math.ucla.edu/~qiuweili/">Qiuwei Li</a> (UCLA, Applied Math)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://www.math.ucla.edu/~shuangli/">Shuang Li</a> (UCLA, Applied Math)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://sites.google.com/view/jsulam">Jeremias Sulam</a> (JHU, BME)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://sites.google.com/view/xli">Xiao Li</a> (CUHK, Data Science)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://qingqu.engin.umich.edu/">Qing Qu</a> (UMich, EECS)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://coral.ise.lehigh.edu/danielprobinson/">Daniel Robinson</a> (Lehigh, ISE)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="http://www1.se.cuhk.edu.hk/~manchoso/">Anthony Man-Cho So</a> (CUHK, SEEM)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="http://inside.mines.edu/~gtang/">Gongguo Tang</a> (CSM, ECE)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="http://inside.mines.edu/~mwakin/">Michael Wakin</a> (CSM, ECE)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="http://cig.ustc.edu.cn/people/list.htm">Xinming Wu</a> (USTC, Geophysics)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://sites.google.com/view/cyou">Chong You</a> (UC Berkeley, EECS)</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="http://cis.jhu.edu/~rvidal/">Rene Vidal</a> (JHU, BME)</p>
-</li>
-</ul>
+<h2>Alumni and former students:</h2>
+<div class="infoblock">
+<div class="blockcontent">
+<p><a href="https://scholar.google.com/citations?user=de_JaPkAAAAJ&amp;hl=en">Zhen Qin</a> (PhD, 2025), now MICDE Postdoctoral Fellow at University of Michigan<br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Shreya Byreddy (MS, 2024)<br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Haiyan Yu (MS, 2022)<br /></p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Alina Liu (K12, 2024), now at The Ohio State University</p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Jackson Sean (K12, 2023), now at Carnegie Mellon University</p>
+</div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p>Xinle Wu (visitor, 2023)</p>
+</div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-04 13:18:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-16 23:01:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
