--- a/Publications.html
+++ b/Publications.html
@@ -29,10 +29,6 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
-<li><p>Zhen Qin, Joseph M. Lukens, Brian T. Kirby, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2501.03144">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," preprint, 2025.</p>
-</li>
-</ul>
-<ul>
 <li><p>H. Zhu, F. Wang, T. Ding, Q. Qu, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2412.08175">Model Collapse Analysis and Improvement for Rectified Flow Models</a>," preprint, 2024.</p>
 </li>
 </ul>
@@ -58,10 +54,6 @@
 </li>
 </ul>
 <ul>
-<li><p>P. Wang, X. Li, C. Yaras, Z. Zhu, L. Balzano, W. Hu, and Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2311.02960">Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination</a>," preprint, 2023.</p>
-</li>
-</ul>
-<ul>
 <li><p>C. Yaras, P. Wang, W. Hu, Z. Zhu, L. Balzano, Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.01154">The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks</a>," preprint, 2023.</p>
 </li>
 </ul>
@@ -76,7 +68,23 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>," Journal of Machine Learning Research, 2025.</p>
+<li><p>Z. Qin, J. M. Lukens, B. T. Kirby, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2501.03144">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," <i>npj Quantum Information</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Qin and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/abstract/document/11106186">Computational and Statistical Guarantees for Tensor-on-Tensor Regression with Tensor Train Decomposition</a>," <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Qin and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/10966053">Robust Low-rank Tensor Train Recovery</a>," IEEE Transactions on Signal Processing, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>P. Wang, X. Li, C. Yaras, Z. Zhu, L. Balzano, W. Hu, and Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2311.02960">Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination</a>," <i>Journal of Machine Learning Research</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>," <i>Journal of Machine Learning Research</i>, 2025.</p>
 </li>
 </ul>
 <ul>
@@ -196,6 +204,10 @@
 </li>
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
+<ul>
+<li><p>X. Chen, Z. Zhu, A. Perrault, <a href="https://rlj.cs.umass.edu/2025/papers/RLJ_RLC_2025_173.pdf">Understanding Learned Representations and Action Collapse in Visual Reinforcement Learning</a>, <i>Reinforcement Learning Conference (RLC)</i> 2025.</p>
+</li>
+</ul>
 <ul>
 <li><p>J. Jiang, J. Zhou, Z. Zhu, &lsquo;&lsquo;Tracing Representation Progression: Analyzing and Enhancing Layer-Wise Similarity," <i>International Conference on Learning Representations (ICLR)</i>, 2025.</p>
 </li>
@@ -456,7 +468,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-22 23:12:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-28 22:51:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
