--- a/index.html
+++ b/index.html
@@ -38,15 +38,37 @@ Email: zhu.3440@osu.edu</p>
 </td></tr></table>
 <p><br /></p>
 <p>We are seeking Ph.D. students in Machine Learning (particularly analyses and practical techniques for deep learning, generative models, and LLMs), Signal Processing, and Quantum Information and Computing. Welcome candidates from any background, e.g., EECS, math, physics.</p>
-<p><b><font size=+1 ><b>Call for papers: <a href="https://deepmath-conference.com/">Conference on the Mathematical Theory of Deep Neural Networks</a>, manuscript due: November 14-15, 2024, Philadelphia</b></font></b></p>
-<p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, March 2025, Stanford</b></font></b></p>
-<h2>News: </h2>
+<p><b><font size=+1 ><b>Call for papers: <a href="https://deepmath-conference.com/">Conference on the Mathematical Theory of Deep Neural Networks</a>, November 6-7, 2025 at Universtiy of Michigan in Ann Arbor</b></font></b></p>
+<h2>Recent Selected Publications:</h2>
+<h3>Representation and Interpretability</h3>
 <ul>
-<li><p>[Aug 2024] Received an NSF RI Medium grant on <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2402952&amp;HistoricalAwards=false">Principled Approaches to Deep Learning for Low-dimensional Structures</a>, joint with U Michigan adn UC Berkeley.</p>
+<li><p>J. Jiang, Y. Dong, J. Zhou, and Z. Zhu &lsquo;&lsquo;<a href="https://arxiv.org/abs/2505.17322">From Compression to Expansion: A Layerwise Analysis of In-Context Learning</a>," 2025.</p>
 </li>
 </ul>
 <ul>
-<li><p>[Aug 2024] Received an NSF ECCS grant on <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2409701&amp;HistoricalAwards=false">Scalable, Robust, and Distributed Nonconvex Approaches for Structured Tensor Recovery</a>, joint with Iowa State.</p>
+<li><p>J. Jiang, J. Zhou, Z. Zhu, &lsquo;&lsquo;<a href="https://openreview.net/pdf?id=vVxeFSR4fU">Tracing Representation Progression: Analyzing and Enhancing Layer-Wise Similarity</a>," <i>International Conference on Learning Representations (ICLR)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," <i>International Conference in Machine Learning (ICML)</i>, 2024.</p>
+</li>
+</ul>
+<h3>Quantum Information</h3>
+<ul>
+<li><p>Z. Qin, J. M. Lukens, B. T. Kirby, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2501.03144">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," <i>npj Quantum Information</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/10417060">Quantum State Tomography for Matrix Product Density Operators</a>," <i>IEEE Transactions on Information Theory</i>, vol. 70, pp. 5030 - 5056, 2024.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Zhu, J. Lukens, and B. Kirby, &lsquo;&lsquo;<a href="https://quantum-journal.org/papers/q-2024-08-29-1455/">On the connection between least squares, regularization, and classical shadows</a>," <i>Quantum</i>, vol. 8, 2024.</p>
+</li>
+</ul>
+<h2>News: </h2>
+<ul>
+<li><p>[Aug 2025] Zhen defended his PhD thesis and will join University of Michigan as MICDE Postdoctoral Fellow. His PhD work received graduate research award from CSE of OSU. </p>
 </li>
 </ul>
 <ul>
@@ -58,23 +80,7 @@ Email: zhu.3440@osu.edu</p>
 </li>
 </ul>
 <ul>
-<li><p>[May 2024] Two papers accepted to <a href="https://icml.cc/">ICML 2024</a>. </p>
-</li>
-</ul>
-<ul>
 <li><p>[April 2024] Tutorial on “Understanding Deep Representation Learning via Neural Collapse” at ICASSP’24 with <a href="https://web.eecs.umich.edu/~girasole/">Prof. Laura Balzano</a>, <a href="https://peng8wang.github.io/">Dr. Peng Wang</a>, and <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a>. Slides: <a href="https://buckeyemailosu-my.sharepoint.com/:b:/g/personal/zhu_3440_osu_edu/EaeGZDFJlThGr1qba59glhQBigc-laiCyT1PulT-A_o7Nw?e=VV2oDH">Lecture-1</a>, <a href="https://buckeyemailosu-my.sharepoint.com/:b:/g/personal/zhu_3440_osu_edu/ESsTdD6iAAxAhYPBs9mLhYsBl0hNR8A3AboUsFYIpKdZ4A?e=2SkCrH">Lecture-2</a></p>
-</li>
-</ul>
-<ul>
-<li><p>[Dec 2023] Paper release: Check out our survey on techniques for improving the efficiency of LLMs <a href="https://arxiv.org/abs/2312.00678">The Efficiency Spectrum of Large Language Models: An Algorithmic Survey</a>, <a href="https://github.com/tding1/Efficient-LLM-Survey">github repo</a> </p>
-</li>
-</ul>
-<ul>
-<li><p>[Dec 2023] Paper release: <a href="https://arxiv.org/abs/2312.00210">DREAM: Diffusion Rectification and Estimation-Adaptive Models</a>, <a href="https://www.tianyuding.com/projects/DREAM/">project page</a></p>
-</li>
-</ul>
-<ul>
-<li><p>[Jun 2023] Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2312840&amp;HistoricalAwards=false">collaborative proposal</a> (with Jere at JHU and Qing at UMich) on Deep Neural Collapse has been awarded by NSF!</p>
 </li>
 </ul>
 <ul>
@@ -90,35 +96,7 @@ Email: zhu.3440@osu.edu</p>
 </li>
 </ul>
 <ul>
-<li><p>[Dec 2022] Invited to serve as area chair at ICML 2023.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Nov 2022] Elected to serve on the Technical Committee of the Machine Learning for Signal Processing (MLSP TC) under the IEEE Signal Processing Society. </p>
-</li>
-</ul>
-<ul>
-<li><p>[Sep 2022] Four papers accepted to <a href="https://nips.cc/">NeurIPS 2022</a>. </p>
-</li>
-</ul>
-<ul>
-<li><p>[August 2022] Our group joined the Department of Computer Science and Engineering at The Ohio State University.</p>
-</li>
-</ul>
-<ul>
-<li><p>[May 2022] On May 26-27, together with <a href="https://sites.google.com/view/jsulam/about">Jere's group</a>, we had our annual Deep & Sparse Team meeting at the University of Denver to discuss project accomplishments and plans.</p>
-</li>
-</ul>
-<ul>
 <li><p>[May 2022] Gave a 10-hours short course (with Sam Buchanan, Yi Ma, Qing Qu, John Wright, and Yuqian Zhang) on &lsquo;&lsquo;<a href="https://highdimdata-lowdimmodels-tutorial.github.io/">Low-Dimensional Models for High-Dimensional Data: From Linear to Nonlinear, Convex to Nonconvex, and Shallow to Deep</a>" at  IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP).</p>
-</li>
-</ul>
-<ul>
-<li><p>[May 2021] Invited to serve as a TPC member (area chair) at NeurIPS 2022.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Dec 2021] Invited to serve as Action Editor at the <a href="https://jmlr.org/tmlr/">Transactions on Machine Learning Research</a>.</p>
 </li>
 </ul>
 <ul>
@@ -126,112 +104,12 @@ Email: zhu.3440@osu.edu</p>
 </li>
 </ul>
 <ul>
-<li><p>[Oct 2021] Four papers accepted to <a href="https://nips.cc/">NeurIPS 2021</a>. </p>
-</li>
-</ul>
-<ul>
-<li><p>[May 2021] One ICML&rsquo;21 on robust subspace learned accepted. New <a href="https://arxiv.org/abs/2105.02375">paper</a> released on understanding the behabior of the classifiers in monder deep neural networks.</p>
-</li>
-</ul>
-<ul>
-<li><p>[May 2021] Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2106881&amp;HistoricalAwards=false">collaborative proposal</a> (with Mike and Gongguo at CSM) on Structured Inference and Adaptive Measurement Design has been awarded by NSF!</p>
-</li>
-</ul>
-<ul>
-<li><p>[March 2021] Invited to serve as a TPC member (area chair) at NeurIPS 2021.</p>
-</li>
-</ul>
-<ul>
-<li><p>[March 2021] Invited <a href="https://www.dropbox.com/s/lsvxde2msteh9mx/Robust_recovery.pdf?dl=0">talk</a> at Microsoft. One paper on <a href="https://arxiv.org/abs/2103.00673">Convolutional Normalization</a> is on arxiv. One CVPR&rsquo;21 on <a href="https://arxiv.org/abs/2103.10559">frame interpolation</a> and one AISTATS&rsquo;21 on hyperplane clustering accepted.</p>
-</li>
-</ul>
-<ul>
 <li><p>[Nov 2020] Co-organizing IEEE workshop on &lsquo;&lsquo;<a href="https://sites.google.com/view/slowdnn/">Seeking Low-dimensionality in Deep Neural Networks (SLowDNN)</a>&rsquo;&rsquo;, Nov. 23rd – Nov. 24th, 2020.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Sep 2020] Our <a href="https://arxiv.org/pdf/2006.08857.pdf">paper</a> has been accepted at NeurIPS as spotlight (top 4%), which characterizes implicit bias with discrepant learning rates and builds connections between over-parameterization, RPCA, and deep neural networks.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Jun 2020] Our proposal (with <a href="https://sites.google.com/view/jsulam/about">Jere</a> at JHU) &lsquo;&lsquo;Collaborative Research: CIF: Small: Deep Sparse Models: Analysis and Algorithms&rsquo;&rsquo; has been awarded by NSF!</p>
-</li>
-</ul>
-<ul>
-<li><p>[Jun 2020] Two papers about over-parameterization are on arXiv: <a href="https://arxiv.org/pdf/2006.06179.pdf">one</a> studies the benefit of over-realized model in dictionary learning, <a href="https://arxiv.org/pdf/2006.08857.pdf">another one</a> characterizes implicit bias with discrepant learning rates and builds connection between over-parameterization, RPCA, and deep neural networks.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Feb 2020] Our paper on robust homography estimation has been accepted to <a href="http://cvpr2020.thecvf.com/">CVPR 2020</a>.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Jan 2020] Co-organized with Qing and Shuyang, our two-session mini-symposium &lsquo;&lsquo;Recent Advances in Optimization Methods for Signal Processing and Machine Learning&rsquo;&rsquo; has been accepted by the inaugural <i><a href="https://www.siam.org/conferences/cm/conference/mds20">SIAM Conference on Mathematics of Data Science</a></i>. See you at Cincinnati, Ohio in May!</p>
-</li>
-</ul>
-<ul>
-<li><p>[Jan 2020] Our review paper (with Qing, Xiao, Manolis, John, and Rene) &lsquo;&lsquo;<a href="https://arxiv.org/abs/2001.06970">Finding the Sparsest Vectors in a Subspace: Theory, Algorithms, and Applications</a>&rsquo;&rsquo; is on arxiv.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Jan 2020] Invited talk at <a href="https://sites.google.com/colorado.edu/statoptml/">Statistics, Optimization and Machine Learning Seminar</a>, University of Colorado Boulder.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Jan 2020] Invited talk at Colorado School of Mines.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Dec 2019 ] Our paper <a href="https://arxiv.org/abs/1809.09237">Nonconvex Robust Low-rank Matrix Recovery</a> has been accepted by <i>SIAM Journal on Optimization</i>.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Dec 2019 ] Our paper <a href="https://openreview.net/forum?id=rygixkHKDH">Analysis of the Optimization Landscapes for Overcomplete Representation Learning</a> was accepted to <a href="https://iclr.cc/">ICLR 2020</a> and was selected for <font color=red ><b>oral</b></font> presentation. In this paper, we showed benign optimization landscapes for learning overcomplete/convolutional dictionaries, ensuring simple gradient descent find the targeted solutions.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Dec 2019 ] Attended <a href="https://nips.cc/">NeurIPS 2019</a> and presented 3 papers. </p>
-</li>
-</ul>
-<ul>
-<li><p>[Dec 2019] Invited talk at <a href="http://www.inspirelab.us/seminars/">Signal and Information Processing Seminar</a>, Rutgers University.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Nov 2019] Our paper (with Xiao, Shixiang, Zengde, Qing, and Anthony) &lsquo;&lsquo;<a href="https://arxiv.org/abs/1911.05047">Nonsmooth Optimization over Stiefel Manifold: Riemannian Subgradient Methods</a>&rsquo;&rsquo; is on arxiv. This work provides (first) explicit convergence rate guarantees for a family of Riemannian subgradient methods when used to optimize nonsmooth functions (that are weakly convex in the Euclidean space) over then Stiefel manifold.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Oct 2019] Attended the Northrop Grumman University Research Symposium, and presented our work on &lsquo;&lsquo;Object Identification with Less Supervision".</p>
-</li>
-</ul>
-<ul>
-<li><p>[Oct 2019] Attended the <a href="https://ima.umn.edu/2019-2020/SW10.14-18.19">Computational Imaging</a> workshop at IMA, University of Minnesota, and presented our work on &lsquo;&lsquo;A Linearly Convergent Method for Non-smooth Non-convex Optimization on Grassmannian with Applications to Robust Subspace and Dictionary Learning&rsquo;&rsquo;.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Sep 2019] Gave an invited talk on <a href="talks/LARM-Sep19-Zhu.pdf">Provable Nonconvex Approaches for Low-rank Models</a> at <a href="https://sites.google.com/site/lowrankmodels/">Workshop on Low-Rank Models and Applications (LRMA)</a>, University of Mons, Belgium, Sep 12 – 13, 2019. </p>
-</li>
-</ul>
-<ul>
-<li><p>[Sep 2019] 3 papers accepted to <a href="https://nips.cc/">NeurIPS 2019</a>.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Aug 2019] Gave an invited talk at <a href="https://iccopt2019.berlin/">ICCOPT 2019, the Sixth International Conference on Continuous Optimization</a>, Technical University (TU) of Berlin, Aug 3 – 8, 2019.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Aug 2019] Our paper (with Xiao, Anthony, Jason) &lsquo;&lsquo;<a href="https://arxiv.org/pdf/1907.11687.pdf">Incremental Methods for Weakly Convex Optimization</a>&rsquo;&rsquo; is on arxiv. This work provides (first) convergence guarantee for incrememtal algorithms and their random shuffling version (including the incremental subgradient method which is the work-horse of deep learning) in solving weakly convex optimization problems which could be nonconvex and nonsmooth.</p>
-</li>
-</ul>
-<ul>
-<li><p>[Aug 2019] Our paper (with Qing, Xiao) &lsquo;&lsquo;<a href="https://arxiv.org/pdf/1908.10776.pdf">A Nonconvex Approach for Exact and Efficient Multichannel Sparse Blind Deconvolution</a>&rsquo;&rsquo; is on arxiv. This work considers multichannel sparse blind deconvolution problem and provides efficient first-order methods that can exactly solve this blind deconvolution problem in a linear rate.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-26 13:40:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-16 23:01:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
