--- a/Publications.html
+++ b/Publications.html
@@ -205,6 +205,18 @@
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
 <ul>
+<li><p>J. Jiang, J. Zhou, B. Peng, X. Ning, and Z .Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2505.17316">Analyzing Fine-Grained Alignment and Enhancing Vision Understanding in Multimodal Language Models</a>,&rsquo;&rsquo; <i>Neural Information Processing Systems (NeurIPS)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>H. Min, Z. Zhu, and R. Vidal, &lsquo;&lsquo;Neural Collapse under Gradient Flow on Shallow ReLU Networks for Orthogonally Separable Data,&rsquo;&rsquo; <i>Neural Information Processing Systems (NeurIPS)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>X. Li, Z. Zhang, X. Li, S. Chen, Z. Zhu, P. Wang, and Q. Qu &lsquo;&lsquo;<a href="https://arxiv.org/abs/2502.05743">Understanding representation dynamics of diffusion models via low-dimensional modeling</a>,&rsquo;&rsquo; <i>Neural Information Processing Systems (NeurIPS)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
 <li><p>X. Chen, Z. Zhu, A. Perrault, <a href="https://rlj.cs.umass.edu/2025/papers/RLJ_RLC_2025_173.pdf">Understanding Learned Representations and Action Collapse in Visual Reinforcement Learning</a>, <i>Reinforcement Learning Conference (RLC)</i> 2025.</p>
 </li>
 </ul>
@@ -468,7 +480,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-28 22:51:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-19 08:54:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
