--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <h3>Quantum Information</h3>
 <ul>
-<li><p>Z. Qin, J. M. Lukens, B. T. Kirby, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2501.03144">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," <i>npj Quantum Information</i>, 2025.</p>
+<li><p>Z. Qin, J. M. Lukens, B. T. Kirby, and Z. Zhu, &lsquo;&lsquo;<a href="https://www.nature.com/articles/s41534-025-01101-1">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," <i>npj Quantum Information</i>, 2025.</p>
 </li>
 </ul>
 <ul>
@@ -67,6 +67,11 @@ Email: zhu.3440@osu.edu</p>
 </li>
 </ul>
 <h2>News: </h2>
+<ul>
+<li><p>[Oct 2025] Gave a tutorial lecture on “<a href="https://low-dim-models-tutorials.github.io/iccv2025-tutorial/assets/slides/ICCV2025_Lec3.pdf">Emergence of Low-dimensional Representations in Deep Models</a>” at ICCV 2025 and a ECE seminar on &lsquo;&lsquo;<a href="pub/Quantum-Oct-2025.pdf">Efficiently Probing Quantum Systems with
+Compressive Measurements</a>" at University of Hawaii at Manoa.</p>
+</li>
+</ul>
 <ul>
 <li><p>[Aug 2025] Zhen defended his PhD thesis and will join University of Michigan as MICDE Postdoctoral Fellow. His PhD work received graduate research award from CSE of OSU. </p>
 </li>
@@ -109,7 +114,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-16 23:01:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-29 11:46:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
