--- a/Publications.html
+++ b/Publications.html
@@ -68,7 +68,7 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>Z. Qin, J. M. Lukens, B. T. Kirby, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2501.03144">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," <i>npj Quantum Information</i>, 2025.</p>
+<li><p>Z. Qin, J. M. Lukens, B. T. Kirby, and Z. Zhu, &lsquo;&lsquo;<a href="https://www.nature.com/articles/s41534-025-01101-1">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," <i>npj Quantum Information</i>, 2025.</p>
 </li>
 </ul>
 <ul>
@@ -205,7 +205,19 @@
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
 <ul>
-<li><p>J. Jiang, J. Zhou, B. Peng, X. Ning, and Z .Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2505.17316">Analyzing Fine-Grained Alignment and Enhancing Vision Understanding in Multimodal Language Models</a>,&rsquo;&rsquo; <i>Neural Information Processing Systems (NeurIPS)</i>, 2025.</p>
+<li><p>A. Liu, C. Hill, J. Jiang, Z. Zhu, &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?", <i>IEEE International Conference on Data Mining (ICDM)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>Xinyi Ling, Hanwen Du, Zhihui Zhu, Xia Ning, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2508.15721v1">EcomMMMU: Strategic Utilization of Visuals for Robust Multimodal E-commerce Models</a>", <i>IJCNLP-AACL</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>Xinyi Ling, Hanwen Du, Bo Peng, Zhihui Zhu, Xia Ning, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2410.17337">Captions Speak Louder than Images: Generalizing Foundation Models for E-commerce from High-quality Multimodal Instruction Data</a>", <i>IJCNLP-AACL</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Jiang, J. Zhou, B. Peng, X. Ning, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2505.17316">Analyzing Fine-Grained Alignment and Enhancing Vision Understanding in Multimodal Language Models</a>,&rsquo;&rsquo; <i>Neural Information Processing Systems (NeurIPS)</i>, 2025.</p>
 </li>
 </ul>
 <ul>
@@ -480,7 +492,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-19 08:54:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-17 22:27:35 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
