--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <h2>News: </h2>
 <ul>
+<li><p>[Nov 2025] Congratulations to Alina Liu and Chris Hill (both high school interns from Columbus Academy) and Jiachen Jiang for receiving the Best Paper Award at <a href="https://2025-icdm-ughs.github.io/">ICDM UGHS Symposium 2025</a> for the work &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?".</p>
+</li>
+</ul>
+<ul>
 <li><p>[Oct 2025] Gave a tutorial lecture on “<a href="https://low-dim-models-tutorials.github.io/iccv2025-tutorial/assets/slides/ICCV2025_Lec3.pdf">Emergence of Low-dimensional Representations in Deep Models</a>” at ICCV 2025 and a ECE seminar on &lsquo;&lsquo;<a href="pub/Quantum-Oct-2025.pdf">Efficiently Probing Quantum Systems with
 Compressive Measurements</a>" at University of Hawaii at Manoa.</p>
 </li>
@@ -114,7 +118,7 @@ Compressive Measurements</a>" at University of Hawaii at Manoa.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-29 11:46:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-17 22:27:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
