--- a/Publications.html
+++ b/Publications.html
@@ -26,7 +26,7 @@
 <img src="pic/ZZ3.jpg" alt="alt text" width="605px" height="219px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <p>(Photo by SL, on the way to Albuquerque for SIAM IS16, May 2016)<br /></p>
-<p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
+<p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=en">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
 <li><p>H. Zhu, F. Wang, T. Ding, Q. Qu, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2412.08175">Model Collapse Analysis and Improvement for Rectified Flow Models</a>," preprint, 2024.</p>
@@ -492,7 +492,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-17 22:27:35 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-17 22:31:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
