--- a/People.html
+++ b/People.html
@@ -84,7 +84,7 @@
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Alina Liu (K12, 2024), now at The Ohio State University</p>
+<p>Alina Liu (K12, 2024 &amp; 2025), now at The Ohio State University</p>
 </div></div>
 <div class="infoblock">
 <div class="blockcontent">
@@ -96,7 +96,7 @@
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-16 23:01:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-18 06:55:12 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
