--- a/Publications.html
+++ b/Publications.html
@@ -205,7 +205,7 @@
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
 <ul>
-<li><p>A. Liu, C. Hill, J. Jiang, Z. Zhu, &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?", <i>IEEE International Conference on Data Mining (ICDM)</i>, 2025.</p>
+<li><p>A. Liu, C. Hill, J. Jiang, Z. Zhu, &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?", <i>IEEE International Conference on Data Mining (ICDM) UGHS Symposium</i>, 2025. (<font color=red ><b>best paper award</b></font>)</p>
 </li>
 </ul>
 <ul>
@@ -492,7 +492,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-17 22:31:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-18 06:57:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
