--- a/Publications.html
+++ b/Publications.html
@@ -68,6 +68,10 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
+<li><p>Z. Qin and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/11303361">Optimal Error Analysis of Channel Estimation for IRS-assisted MIMO Systems</a>," <i>IEEE Transactions on Signal Processing (TSP)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
 <li><p>Z. Qin, J. M. Lukens, B. T. Kirby, and Z. Zhu, &lsquo;&lsquo;<a href="https://www.nature.com/articles/s41534-025-01101-1">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," <i>npj Quantum Information</i>, 2025.</p>
 </li>
 </ul>
@@ -492,7 +496,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-18 06:57:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-27 17:16:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
