--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <h2>News: </h2>
 <ul>
-<li><p>[Nov 2025] Congratulations to Alina, Chris, and Jiachen for receiving the Best Paper Award at <a href="https://2025-icdm-ughs.github.io/">ICDM UGHS Symposium 2025</a> for the work &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?".</p>
+<li><p>[Nov 2025] Congratulations to Alina Liu and Chris Hill (high school interns from Columbus Academy) and Jiachen Jiang for receiving the Best Paper Award at <a href="https://2025-icdm-ughs.github.io/">ICDM UGHS Symposium 2025</a> for the work &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?".</p>
 </li>
 </ul>
 <ul>
@@ -118,7 +118,7 @@ Compressive Measurements</a>" at University of Hawaii at Manoa.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-18 06:55:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-27 17:16:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
